fix viewport whitespace issue

--- a/src/containers/Contact/contact.css
+++ b/src/containers/Contact/contact.css
@@ -1,6 +1,5 @@
 .contact_main {
   background-color: #152238;
-  width: 100vw;
   min-height: 100vh;
   color: white;
   display: flex;
