--- a/src/containers/Resume/resume.css
+++ b/src/containers/Resume/resume.css
@@ -1,6 +1,6 @@
 .resume_main {
   background-color: #d8b81f;
-  width: 100vw;
+
   min-height: 100vh;
   color: black;
   padding: 20px;
